src/objdetect/objdetect.h

// HOGDescriptor
// struct for detection region of interest (ROI)
// typedef struct DetectionROI {
//   VecDouble confidences;
//   VecPoint  locations;
//   double    scale;
// } DetectionROI;
CvStatus HOGDescriptor_New(HOGDescriptor *rval);
CvStatus HOGDescriptor_NewFromFile(char *filename, HOGDescriptor *rval);
void     HOGDescriptor_Close(HOGDescriptorPtr self);
CvStatus HOGDescriptor_Load(HOGDescriptor self, char *name, bool *rval);
CvStatus HOGDescriptor_Detect(HOGDescriptor self, Mat img, VecPoint *foundLocations, VecDouble *weights,
                              double hitThresh, Size winStride, Size padding, VecPoint *searchLocations);
CvStatus HOGDescriptor_Detect2(HOGDescriptor self, Mat img, VecPoint *foundLocations, double hitThresh,
                               Size winStride, Size padding, VecPoint *searchLocations);
CvStatus HOGDescriptor_DetectMultiScale(HOGDescriptor self, Mat img, VecRect *rval);
CvStatus HOGDescriptor_DetectMultiScaleWithParams(HOGDescriptor self, Mat img, double hitThresh,
                                                  Size winStride, Size padding, double scale,
                                                  double finalThreshold, bool useMeanshiftGrouping,
                                                  VecRect *rval);
CvStatus HOG_GetDefaultPeopleDetector(VecFloat *rval);
CvStatus HOGDescriptor_SetSVMDetector(HOGDescriptor self, VecFloat det);
CvStatus HOGDescriptor_Compute(HOGDescriptor self, Mat img, VecFloat *descriptors, Size winStride,
                               Size padding, VecPoint *locations);
CvStatus HOGDescriptor_computeGradient(HOGDescriptor self, Mat img, Mat grad, Mat angleOfs, Size paddingTL,
                                       Size paddingBR);
// CvStatus HOGDescriptor_detectMultiScaleROI(HOGDescriptor self, Mat img, VecRect *foundLocations,
//                                            DetectionROI *locations, int *lenLocations, double hitThreshold,
//                                            int groupThreshold);
// CvStatus HOGDescriptor_detectROI(HOGDescriptor self, Mat img, VecPoint *locations, VecPoint
// *foundLocations,
//                                  VecDouble *confidences, double hitThreshold, Size winStride, Size
//                                  padding);
CvStatus HOGDescriptor_getDaimlerPeopleDetector(VecFloat *rval);
CvStatus HOGDescriptor_getDescriptorSize(HOGDescriptor self, size_t *rval);
CvStatus HOGDescriptor_getWinSigma(HOGDescriptor self, double *rval);
CvStatus HOGDescriptor_groupRectangles(HOGDescriptor self, VecRect rectList, VecDouble weights,
                                       int groupThreshold, double eps);
CvStatus GroupRectangles(VecRect rects, int groupThreshold, double eps);
CvStatus FaceDetectorYN_SetScoreThreshold(FaceDetectorYN self, float score_threshold);
CvStatus FaceDetectorYN_SetTopK(FaceDetectorYN self, int top_k);
// FaceRecognizerSF
CvStatus FaceRecognizerSF_New(const char *model, const char *config, int backend_id, int target_id,
                              FaceRecognizerSF *rval);
void     FaceRecognizerSF_Close(FaceRecognizerSFPtr self);
CvStatus FaceRecognizerSF_AlignCrop(FaceRecognizerSF self, Mat src_img, Mat face_box, Mat *aligned_img);
CvStatus FaceRecognizerSF_Feature(FaceRecognizerSF self, Mat aligned_img, bool clone, Mat *face_feature);
CvStatus FaceRecognizerSF_Match(FaceRecognizerSF self, Mat face_feature1, Mat face_feature2, int dis_type,
                                double *distance);