lib/src/g/objdetect.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceDetectorYN, ffi.Float, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetNMSThreshold_Async(
  FaceDetectorYN self,
  double nms_threshold,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Float)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetScoreThreshold(
  FaceDetectorYN self,
  double score_threshold,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceDetectorYN, ffi.Float, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetScoreThreshold_Async(
  FaceDetectorYN self,
  double score_threshold,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Int)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetTopK(
  FaceDetectorYN self,
  int top_k,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceDetectorYN, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetTopK_Async(
  FaceDetectorYN self,
  int top_k,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceRecognizerSF, Mat, Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_AlignCrop(
  FaceRecognizerSF self,
  Mat src_img,
  Mat face_box,
  ffi.Pointer<Mat> aligned_img,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceRecognizerSF, Mat, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_AlignCrop_Async(
  FaceRecognizerSF self,
  Mat src_img,
  Mat face_box,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(FaceRecognizerSFPtr)>()
external void FaceRecognizerSF_Close(
  FaceRecognizerSFPtr self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceRecognizerSF, Mat, ffi.Bool, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_Feature(
  FaceRecognizerSF self,
  Mat aligned_img,
  bool clone,
  ffi.Pointer<Mat> face_feature,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceRecognizerSF, Mat, ffi.Bool, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_Feature_Async(
  FaceRecognizerSF self,
  Mat aligned_img,
  bool clone,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceRecognizerSF, Mat, Mat, ffi.Int, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_Match(
  FaceRecognizerSF self,
  Mat face_feature1,
  Mat face_feature2,
  int dis_type,
  ffi.Pointer<ffi.Double> distance,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FaceRecognizerSF, Mat, Mat, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_Match_Async(
  FaceRecognizerSF self,
  Mat face_feature1,
  Mat face_feature2,
  int dis_type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
        ffi.Int, ffi.Int, ffi.Pointer<FaceRecognizerSF>)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_New(
  ffi.Pointer<ffi.Char> model,
  ffi.Pointer<ffi.Char> config,
  int backend_id,
  int target_id,
  ffi.Pointer<FaceRecognizerSF> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
        ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceRecognizerSF_New_Async(
  ffi.Pointer<ffi.Char> model,
  ffi.Pointer<ffi.Char> config,
  int backend_id,
  int target_id,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<VecRect>, ffi.Int, ffi.Double)>()
external ffi.Pointer<CvStatus> GroupRectangles(
  ffi.Pointer<VecRect> rects,
  int groupThreshold,
  double eps,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<VecRect>, ffi.Int, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> GroupRectangles_Async(
  ffi.Pointer<VecRect> rects,
  int groupThreshold,
  double eps,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Void Function(HOGDescriptorPtr)>()
external void HOGDescriptor_Close(
  HOGDescriptorPtr self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Pointer<VecF32>,
        Size, Size, ffi.Pointer<VecPoint>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Compute(
  HOGDescriptor self,
  Mat img,
  ffi.Pointer<VecF32> descriptors,
  Size winStride,
  Size padding,
  ffi.Pointer<VecPoint> locations,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        HOGDescriptor, Mat, Size, Size, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Compute_Async(
  HOGDescriptor self,
  Mat img,
  Size winStride,
  Size padding,
  imp1.CvCallback_2 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Pointer<VecPoint>,
        ffi.Pointer<VecF64>, ffi.Double, Size, Size, ffi.Pointer<VecPoint>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Detect(
  HOGDescriptor self,
  Mat img,
  ffi.Pointer<VecPoint> foundLocations,
  ffi.Pointer<VecF64> weights,
  double hitThresh,
  Size winStride,
  Size padding,
  ffi.Pointer<VecPoint> searchLocations,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Pointer<VecPoint>,
        ffi.Double, Size, Size, ffi.Pointer<VecPoint>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Detect2(
  HOGDescriptor self,
  Mat img,
  ffi.Pointer<VecPoint> foundLocations,
  double hitThresh,
  Size winStride,
  Size padding,
  ffi.Pointer<VecPoint> searchLocations,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        HOGDescriptor, Mat, ffi.Double, Size, Size, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Detect2_Async(
  HOGDescriptor self,
  Mat img,
  double hitThresh,
  Size winStride,
  Size padding,
  imp1.CvCallback_2 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Pointer<VecRect>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScale(
  HOGDescriptor self,
  Mat img,
  ffi.Pointer<VecRect> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Double, Size, Size,
        ffi.Double, ffi.Double, ffi.Bool, ffi.Pointer<VecRect>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScaleWithParams(
  HOGDescriptor self,
  Mat img,
  double hitThresh,
  Size winStride,
  Size padding,
  double scale,
  double finalThreshold,
  bool useMeanshiftGrouping,
  ffi.Pointer<VecRect> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Double, Size, Size,
        ffi.Double, ffi.Double, ffi.Bool, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScaleWithParams_Async(
  HOGDescriptor self,
  Mat img,
  double hitThresh,
  Size winStride,
  Size padding,
  double scale,
  double finalThreshold,
  bool useMeanshiftGrouping,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScale_Async(
  HOGDescriptor self,
  Mat img,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        HOGDescriptor, Mat, ffi.Double, Size, Size, imp1.CvCallback_3)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Detect_Async(
  HOGDescriptor self,
  Mat img,
  double hitThresh,
  Size winStride,
  Size padding,
  imp1.CvCallback_3 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        HOGDescriptor, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Load(
  HOGDescriptor self,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        HOGDescriptor, ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_Load_Async(
  HOGDescriptor self,
  ffi.Pointer<ffi.Char> name,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<HOGDescriptor>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_New(
  ffi.Pointer<HOGDescriptor> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<HOGDescriptor>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_NewFromFile(
  ffi.Pointer<ffi.Char> filename,
  ffi.Pointer<HOGDescriptor> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_NewFromFile_Async(
  ffi.Pointer<ffi.Char> filename,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_New_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(HOGDescriptor, VecF32)>()
external ffi.Pointer<CvStatus> HOGDescriptor_SetSVMDetector(
  HOGDescriptor self,
  VecF32 det,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, VecF32, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> HOGDescriptor_SetSVMDetector_Async(
  HOGDescriptor self,
  VecF32 det,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, Mat, Mat, Size, Size)>()
external ffi.Pointer<CvStatus> HOGDescriptor_computeGradient(
  HOGDescriptor self,
  Mat img,
  Mat grad,
  Mat angleOfs,
  Size paddingTL,
  Size paddingBR,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        HOGDescriptor, Mat, Mat, Mat, Size, Size, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> HOGDescriptor_computeGradient_Async(
  HOGDescriptor self,
  Mat img,
  Mat grad,
  Mat angleOfs,
  Size paddingTL,
  Size paddingBR,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<VecF32>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_getDaimlerPeopleDetector(
  ffi.Pointer<VecF32> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_getDaimlerPeopleDetector_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<ffi.Size>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_getDescriptorSize(
  HOGDescriptor self,
  ffi.Pointer<ffi.Size> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(HOGDescriptor, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_getDescriptorSize_Async(
  HOGDescriptor self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> HOGDescriptor_getWinSigma(
  HOGDescriptor self,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(HOGDescriptor, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOGDescriptor_getWinSigma_Async(
  HOGDescriptor self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<VecRect>,
        ffi.Pointer<VecF64>, ffi.Int, ffi.Double)>()
external ffi.Pointer<CvStatus> HOGDescriptor_groupRectangles(
  HOGDescriptor self,
  ffi.Pointer<VecRect> rectList,
  ffi.Pointer<VecF64> weights,
  int groupThreshold,
  double eps,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<VecRect>,
        ffi.Pointer<VecF64>, ffi.Int, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> HOGDescriptor_groupRectangles_Async(
  HOGDescriptor self,
  ffi.Pointer<VecRect> rectList,
  ffi.Pointer<VecF64> weights,
  int groupThreshold,
  double eps,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<VecF32>)>()
external ffi.Pointer<CvStatus> HOG_GetDefaultPeopleDetector(
  ffi.Pointer<VecF32> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> HOG_GetDefaultPeopleDetector_Async(
  imp1.CvCallback_1 callback,
);
